# OFS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LuaApiReference.md  README.md  TODO.txt  appveyor.yml  icon.rc  iconOFP.rc  ofs-installer.iss
OFS-lib/: CMakeLists.txt  OFS_Allocator.cpp  OFS_AsyncIO.cpp  OFS_AsyncIO.h  OFS_BinarySerialization.h  OFS_ControllerInput.cpp  OFS_ControllerInput.h  OFS_DynamicFontAtlas.cpp  OFS_DynamicFontAtlas.h  OFS_FileLogging.cpp  OFS_FileLogging.h  OFS_GL.h  OFS_MpvLoader.cpp  OFS_MpvLoader.h  OFS_Reflection.h  OFS_Serialization.h  OFS_Threadpool.cpp  OFS_Threadpool.h  OFS_UndoSystem.cpp  OFS_UndoSystem.h  OFS_Util.cpp  OFS_Util.h  OFS_VectorSet.h
OFS-lib/Funscript/: Funscript.cpp  Funscript.h  FunscriptAction.cpp  FunscriptAction.h  FunscriptHeatmap.cpp  FunscriptHeatmap.h  FunscriptSpline.h  FunscriptUndoSystem.cpp  FunscriptUndoSystem.h
OFS-lib/UI/: GradientBar.cpp  GradientBar.h  KeybindingSystem.cpp  KeybindingSystem.h  OFS_BlockingTask.cpp  OFS_BlockingTask.h  OFS_ImGui.cpp  OFS_ImGui.h  OFS_KeybindingSystem.cpp  OFS_KeybindingSystem.h  OFS_Profiler.cpp  OFS_Profiling.h  OFS_ScriptTimeline.cpp  OFS_ScriptTimeline.h  OFS_ScriptTimelineEvents.h  OFS_Videoplayer.cpp  OFS_Videoplayer.h  OFS_VideoplayerControls.cpp  OFS_VideoplayerControls.h  OFS_Videopreview.cpp  OFS_Videopreview.h  OFS_Waveform.cpp  OFS_Waveform.h  ScriptPositionsOverlayMode.cpp  ScriptPositionsOverlayMode.h
OFS-lib/event/: EventSystem.cpp  EventSystem.h  OFS_Event.cpp  OFS_Event.h  OFS_EventSystem.cpp  OFS_EventSystem.h
OFS-lib/gl/: OFS_Shader.cpp  OFS_Shader.h  OFS_Simulator3D.cpp  OFS_Simulator3D.h  OFS_Texture.cpp  OFS_Texture.h
OFS-lib/im3d/: OFS_im3d.cpp  OFS_im3d.h
OFS-lib/imgui_impl/: imgui_impl_sdl.cpp
OFS-lib/localization/: OFS_Localization.cpp  OFS_Localization.h
OFS-lib/player/: OFS_TCode.cpp  OFS_TCode.h  OFS_TCodeChannel.cpp  OFS_TCodeChannel.h  OFS_TCodeProducer.cpp  OFS_TCodeProducer.h  OFS_Tcode.cpp  OFS_Tcode.h
OFS-lib/state/: OFS_LibState.cpp  OFS_LibState.h  OFS_StateHandle.h  OFS_StateManager.cpp  OFS_StateManager.h
OFS-lib/state/states/: BaseOverlayState.h  ChapterState.cpp  ChapterState.h  ControllerState.h  KeybindingState.cpp  KeybindingState.h  VideoplayerWindowState.h  WaveformState.h
OFS-lib/videoplayer/: OFS_Videoplayer.h  OFS_VideoplayerEvents.cpp  OFS_VideoplayerEvents.h  OFS_VideoplayerWindow.cpp  OFS_VideoplayerWindow.h
OFS-lib/videoplayer/impl/: OFS_MpvVideoplayer.cpp
lib/: CMakeLists.txt  note_for_libmpv.txt
lib/glad/src/: glad.c
lib/glad2/src/: gl.c  gles2.c
lib/im3d/: im3d_config.h
lib/libmpv/: mpv.def  mpv.exp  mpv.lib
lib/libserialport/: .gitignore  config.h  libserialport.h
lib/luasocket/: NOTE.txt  luasocket.h
lib/sqlite_orm/: CMakeLists.txt  TODO.md  appveyor.yml
lib/sqlite_orm/cmake/: ucm.cmake
lib/stb/: asap.h  sinfl.h
lib/tinyfiledialogs/: README.txt  tinyfiledialogs.c
player/: CMakeLists.txt  OFP.cpp  OFP.h  main.cpp
player/UI/: OFP_Settings.cpp  OFP_Settings.h  OFP_Videobrowser.cpp  OFP_Videobrowser.h
player/Videobrowser/: OFP_Videobrowser.cpp  OFP_Videobrowser.h  OFP_VideobrowserItem.cpp  OFP_VideobrowserItem.h  OFP_Videopreview.cpp  OFP_Videopreview.h
player/Videolibrary/: OFP_Sqlite.cpp  OFP_Sqlite.h
player/VideoplayerWrapper/: OFP_WrappedPlayer.cpp  OFP_WrappedPlayer.h  OFP_WrappedVideoplayerControls.cpp  OFP_WrappedVideoplayerControls.h
src/: CMakeLists.txt  ControllerInput.cpp  ControllerInput.h  IconResource.h  OFS_DynamicFontAtlas.cpp  OFS_DynamicFontAtlas.h  OFS_Project.cpp  OFS_Project.h  OFS_ProjectOld.cpp  OFS_ProjectOld.h  OFS_Reflection.h  OFS_ScriptingMode.cpp  OFS_ScriptingMode.h  OFS_Serialization.cpp  OFS_Serialization.h  OFS_UndoSystem.cpp  OFS_UndoSystem.h  OpenFunscripter.cpp  OpenFunscripter.h  OpenFunscripterSettings.cpp  OpenFunscripterSettings.h  OpenFunscripterState.cpp  OpenFunscripterState.h  OpenFunscripterUtil.cpp  OpenFunscripterUtil.h  RawInput.cpp  RawInput.h  ScriptingMode.cpp  ScriptingMode.h  UndoSystem.cpp  UndoSystem.h  main.cpp
src/Funscript/: Funscript.cpp  Funscript.h  FunscriptAction.h  FunscriptUndoSystem.cpp  FunscriptUndoSystem.h  OFS_ScriptSettings.cpp  OFS_ScriptSettings.h
src/UI/: GradientBar.cpp  GradientBar.h  KeybindingSystem.cpp  KeybindingSystem.h  OFS_ChapterManager.cpp  OFS_ChapterManager.h  OFS_DownloadFfmpeg.cpp  OFS_DownloadFfmpeg.h  OFS_FunscriptMetadataEditor.cpp  OFS_FunscriptMetadataEditor.h  OFS_Preferences.cpp  OFS_Preferences.h  OFS_ScriptPositionsOverlays.cpp  OFS_ScriptPositionsOverlays.h  OFS_ScriptSimulator.cpp  OFS_ScriptSimulator.h  OFS_Settings.cpp  OFS_Settings.h  OFS_SpecialFunctions.cpp  OFS_SpecialFunctions.h  OpenFunscripterSettings.cpp  OpenFunscripterSettings.h  OpenFunscripterVideoplayer.cpp  OpenFunscripterVideoplayer.h  ScriptPositionsOverlayMode.cpp  ScriptPositionsOverlayMode.h  ScriptPositionsWindow.cpp  ScriptPositionsWindow.h  ScriptSimulator.cpp  ScriptSimulator.h  SpecialFunctions.cpp  SpecialFunctions.h
src/api/: OFS_WebsocketApi.cpp  OFS_WebsocketApi.h  OFS_WebsocketApiClient.cpp  OFS_WebsocketApiClient.h  OFS_WebsocketApiCommands.cpp  OFS_WebsocketApiCommands.h  OFS_WebsocketApiEvents.cpp  OFS_WebsocketApiEvents.h
src/event/: EventSystem.cpp  EventSystem.h  OFS_Events.cpp  OFS_Events.h
src/gl/: OFS_GPU.cpp  OFS_Shader.cpp  OFS_Shader.h  OFS_Simulator3D.cpp  OFS_Simulator3D.h  OFS_Simulator3DOld.cpp  Simulator3D.cpp  Simulator3D.h
src/imgui_impl/: imgui_impl_opengl3.cpp
src/lua/: OFS_Lua.h  OFS_LuaCoreExtension.cpp  OFS_LuaCoreExtension.h  OFS_LuaExtension.cpp  OFS_LuaExtension.h  OFS_LuaExtensionAPI.cpp  OFS_LuaExtensionAPI.h  OFS_LuaExtensionApi.cpp  OFS_LuaExtensionApi.h  OFS_LuaExtensions.cpp  OFS_LuaExtensions.h  OFS_LuaExtensions2.cpp  OFS_LuaExtensions2.h
src/lua/api/: OFS_LuaImGuiAPI.h  (+7 more)
src/state/: MetadataEditorState.h  OpenFunscripterState.cpp  OpenFunscripterState.h  PreferenceState.h  ProjectBookmarkState.cpp  ProjectBookmarkState.h  ProjectState.h  ScriptModeState.h  Simulator3dState.h  SimulatorState.h  SpecialFunctionsState.h  WebsocketApiState.h
(+44 files in other folders)
